--- a/diversao.html
+++ b/diversao.html
@@ -132,109 +132,76 @@
     <div class="box-unico">
       <p>Jogos de Futebol – Poki</p>
       <a href="https://poki.com/en/soccer" target="_blank" rel="noopener noreferrer">
-        <img src="poki-soccer.jpg" alt="Jogos de Futebol Poki">
+        <img src="diversaopoki.png" alt="Jogos de Futebol Poki">
       </a>
     </div>
 
     <div class="box-unico">
       <p>Jogos de Futebol – Kizi</p>
       <a href="https://kizi.com/football-soccer" target="_blank" rel="noopener noreferrer">
-        <img src="kizi-football.jpg" alt="Jogos de Futebol Kizi">
+        <img src="diversaokizi.png" alt="Jogos de Futebol Kizi">
       </a>
     </div>
 
     <div class="box-unico">
       <p>Jogos de Futebol – NuMuKi</p>
       <a href="https://www.numuki.com/games/soccer/" target="_blank" rel="noopener noreferrer">
-        <img src="numuki-soccer.jpg" alt="Jogos de Futebol NuMuKi">
+        <img src="diversaonumuki.png" alt="Jogos de Futebol NuMuKi">
       </a>
     </div>
 
     <div class="box-unico">
       <p>Jogos de Futebol – HeyGame</p>
       <a href="https://heygame.io/c/soccer" target="_blank" rel="noopener noreferrer">
-        <img src="heygame-soccer.jpg" alt="Jogos de Futebol HeyGame">
+        <img src="diversaoheygame.png" alt="Jogos de Futebol HeyGame">
       </a>
     </div>
 
     <div class="box-unico">
       <p>Jogos de Futebol Gratuitos – Kevin Games</p>
       <a href="https://kevin.games/soccer" target="_blank" rel="noopener noreferrer">
-        <img src="kevin-games-soccer.jpg" alt="Jogos de Futebol Kevin Games">
+        <img src="diversaokevingames.png" alt="Jogos de Futebol Kevin Games">
       </a>
     </div>
 
     <div class="box-unico">
       <p>Jogos de Futebol – GamesFrog (Soccer)</p>
       <a href="https://gamesfrog.com/games/soccer" target="_blank" rel="noopener noreferrer">
-        <img src="gamesfrog-soccer.jpg" alt="Jogos de Futebol GamesFrog">
+        <img src="diversaomegafrog.png" alt="Jogos de Futebol GamesFrog">
       </a>
     </div>
 
     <div class="box-unico">
       <p>Super Liquid Soccer – Navegador</p>
       <a href="https://poki.com/en/g/super-liquid-soccer" target="_blank" rel="noopener noreferrer">
-        <img src="super-liquid-soccer.jpg" alt="Super Liquid Soccer">
+        <img src="diversaopoki.png" alt="Super Liquid Soccer">
       </a>
     </div>
 
     <div class="box-unico">
       <p>Jogos de Futebol – GamingCloud</p>
       <a href="https://www.gamingcloud.com/games/soccer/" target="_blank" rel="noopener noreferrer">
-        <img src="gamingcloud-soccer.jpg" alt="Jogos de Futebol GamingCloud">
+        <img src="diversaogamingcloud.png" alt="Jogos de Futebol GamingCloud">
       </a>
     </div>
 
-    <div class="box-unico">
-      <p>Jogos de Futebol – GamesGames</p>
-      <a href="https://www.gamesgames.com/games/soccer" target="_blank" rel="noopener noreferrer">
-        <img src="gamesgames-soccer.jpg" alt="Jogos de Futebol GamesGames">
-      </a>
-    </div>
+    
 
     <div class="box-unico">
       <p>Jogos de Futebol – Only Soccer Games</p>
       <a href="https://www.onlysoccergames.com/" target="_blank" rel="noopener noreferrer">
-        <img src="onlysoccergames.jpg" alt="Only Soccer Games">
+        <img src="diversaoonlygame.png" alt="Only Soccer Games">
       </a>
     </div>
 
     <div class="box-unico">
       <p>Jogos de Futebol – Snokido</p>
       <a href="https://www.snokido.com/games/soccer" target="_blank" rel="noopener noreferrer">
-        <img src="snokido-soccer.jpg" alt="Jogos de Futebol Snokido">
+        <img src="diversaosnokido.png" alt="Jogos de Futebol Snokido">
       </a>
     </div>
 
-    <div class="box-unico">
-      <p>Jogos de Futebol – [Link Extra 12]</p>
-      <a href="#" target="_blank" rel="noopener noreferrer">
-        <img src="placeholder12.jpg" alt="Jogos de Futebol Placeholder">
-      </a>
-    </div>
-
-    <div class="box-unico">
-      <p>Jogos de Futebol – [Link Extra 13]</p>
-      <a href="#" target="_blank" rel="noopener noreferrer">
-        <img src="placeholder13.jpg" alt="Jogos de Futebol Placeholder">
-      </a>
-    </div>
-
-    <div class="box-unico">
-      <p>Jogos de Futebol – [Link Extra 14]</p>
-      <a href="#" target="_blank" rel="noopener noreferrer">
-        <img src="placeholder14.jpg" alt="Jogos de Futebol Placeholder">
-      </a>
-    </div>
-
-    <div class="box-unico">
-      <p>Jogos de Futebol – [Link Extra 15]</p>
-      <a href="#" target="_blank" rel="noopener noreferrer">
-        <img src="placeholder15.jpg" alt="Jogos de Futebol Placeholder">
-      </a>
-    </div>
-
-  </div>
+    
 
 </body>
 </html>
