--- a/quizmg01.html
+++ b/quizmg01.html
@@ -170,55 +170,57 @@
         const perguntas = [
             
   {
-    pergunta: "Em que ano a FES foi fundada (com a denominação original 'Liga Sportiva Espírito Santense')?",
-    opcoes: ["1920", "1930", "1917", "1915"],
-    respostaCorreta: 3
-  },
-  {
-    pergunta: "Qual era o nome original da entidade que depois se tornou a FES?",
-    opcoes: ["Federação de Futebol do Espírito Santo", "Federação Esportiva Espírito-Santense", "Liga Sportiva Espírito Santense", "Associação Capixaba de Esportes"],
-    respostaCorreta: 3
-  },
-  {
-    pergunta: "Em que cidade está localizada a sede da FES?",
-    opcoes: ["Vitória", "Vila Velha", "Cariacica", "Serra"],
-    respostaCorreta: 1
-  },
-  {
-    pergunta: "Qual dessas competições é organizada diretamente pela FES?",
-    opcoes: ["Copa do Brasil", "Campeonato Mineiro", "Campeonato Capixaba", "Taça Guanabara"],
-    respostaCorreta: 3
-  },
-  {
-    pergunta: "Qual desses clubes faz parte do 'trio de ferro' do futebol capixaba?",
-    opcoes: ["Botafogo", "Desportiva Ferroviária", "Atlético Mineiro", "Paysandu"],
-    respostaCorreta: 2
-  },
-  {
-    pergunta: "Segundo dados de 2023, qual foi o valor aproximado dos investimentos da FES?",
-    opcoes: ["R$ 10 milhões", "R$ 2 milhões", "R$ 6 milhões", "R$ 8 milhões"],
-    respostaCorreta: 3
-  },
-  {
-    pergunta: "Em que ano a FES anunciou o calendário com 15 competições estaduais?",
-    opcoes: ["2025", "2026", "2024", "2023"],
-    respostaCorreta: 1
-  },
-  {
-    pergunta: "Qual é a principal função da Federação de Futebol do Estado do Espírito Santo?",
-    opcoes: ["Gerenciar apenas times da capital", "Administrar apenas categorias de base", "Promover torneios internacionais", "Organizar o futebol amador e profissional no estado"],
-    respostaCorreta: 4
-  },
-  {
-    pergunta: "A FES é filiada a qual entidade do futebol brasileiro?",
-    opcoes: ["FIFA", "Federação Paulista de Futebol", "Confederação Brasileira de Futebol (CBF)", "CONMEBOL"],
-    respostaCorreta: 3
-  },
-  {
-    pergunta: "Qual é a data oficial de fundação da atual FES, conforme o estatuto?",
-    opcoes: ["28 de abril de 1938", "15 de março de 1950", "21 de setembro de 1984", "02 de maio de 1917"],
-    respostaCorreta: 4
-  }
+"pergunta": "Em que ano a FMF (Federação Mineira de Futebol) foi fundada com o nome original 'Liga Mineira de Desportos Terrestres'?",
+"opcoes": ["1925", "1915", "1930", "1920"],
+"respostaCorreta": 2
+},
+{
+"pergunta": "Qual era o nome original da entidade que depois se tornou a FMF?",
+"opcoes": ["Federação de Futebol de Minas Gerais", "Associação Atlética Mineira", "Liga Mineira de Desportos Terrestres", "Confederação Mineira de Esportes"],
+"respostaCorreta": 3
+},
+{
+"pergunta": "Em que cidade está localizada a sede da FMF?",
+"opcoes": ["Uberlândia", "Belo Horizonte", "Juiz de Fora", "Montes Claros"],
+"respostaCorreta": 2
+},
+{
+"pergunta": "Qual dessas competições é organizada diretamente pela FMF?",
+"opcoes": ["Copa do Nordeste", "Campeonato Brasileiro Série A", "Campeonato Mineiro", "Copa Verde"],
+"respostaCorreta": 3
+},
+{
+"pergunta": "Qual desses clubes faz parte do 'trio de ferro' do futebol mineiro?",
+"opcoes": ["Cruzeiro", "Flamengo", "Corinthians", "São Paulo"],
+"respostaCorreta": 1
+},
+{
+"pergunta": "Segundo dados recentes, qual foi o valor aproximado dos investimentos da FMF em 2024?",
+"opcoes": ["R$ 15 milhões", "R$ 25 milhões", "R$ 20 milhões", "R$ 30 milhões"],
+"respostaCorreta": 3
+},
+{
+"pergunta": "Em que ano a FMF anunciou o calendário com recorde de 18 competições estaduais?",
+"opcoes": ["2023", "2025", "2024", "2026"],
+"respostaCorreta": 2
+},
+{
+"pergunta": "Qual é a principal função da Federação Mineira de Futebol?",
+"opcoes": ["Gerenciar apenas clubes da capital", "Organizar apenas o futebol feminino", "Promover o futebol amador e profissional em todo o estado", "Controlar seleções internacionais"],
+"respostaCorreta": 3
+},
+{
+"pergunta": "A FMF é filiada a qual entidade do futebol brasileiro?",
+"opcoes": ["FIFA", "CONMEBOL", "Confederação Brasileira de Futebol (CBF)", "Federação Paulista de Futebol"],
+"respostaCorreta": 3
+},
+{
+"pergunta": "Qual é a data oficial de fundação da atual FMF, conforme o estatuto?",
+"opcoes": ["10 de junho de 1920", "05 de junho de 1915", "22 de abril de 1930", "15 de agosto de 1925"],
+"respostaCorreta": 2
+}
+
+
 ];
 
         let perguntaAtual = 0;
