--- a/quizmg04.html
+++ b/quizmg04.html
@@ -15,16 +15,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Quiz Futebol</title>
 
-
 <!-- Botões de ação -->
     <section class="action-buttons">
   <button onclick="window.location.href='index.html'">Página Inicial</button>
 </section>
 
-
-
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1074669766193195"
      crossorigin="anonymous"></script>
+
+
+
 
 
 <style>
@@ -168,60 +168,60 @@
         }
 
         const perguntas = [
-  {
-    pergunta: "Qual clube capixaba é conhecido como 'Alvianil de Bento Ferreira'?",
-    opcoes: ["Vitória-ES", "Rio Branco-ES", "Serra FC", "Vilavelhense"],
-    respostaCorreta: 0
-  },
-  {
-    pergunta: "Em que ano o Estádio Kléber Andrade foi reinaugurado após reforma completa?",
-    opcoes: ["2014", "2010", "2016", "2012"],
-    respostaCorreta: 0
-  },
-  {
-    pergunta: "Qual desses clubes conquistou a Copa Espírito Santo em 2022?",
-    opcoes: ["Nova Venécia", "Real Noroeste", "Desportiva Ferroviária", "Vitória-ES"],
-    respostaCorreta: 0
-  },
-  {
-    pergunta: "Qual é o principal objetivo da Supercopa Capixaba?",
-    opcoes: ["Decidir o acesso à Série D", "Unir os campeões do Capixabão e da Copa ES", "Selecionar atletas para a base da FES", "Revelar novos árbitros"],
-    respostaCorreta: 1
-  },
-  {
-    pergunta: "Em que cidade fica localizado o Estádio Engenheiro Araripe, casa da Desportiva Ferroviária?",
-    opcoes: ["Vila Velha", "Cariacica", "Vitória", "Serra"],
-    respostaCorreta: 1
-  },
-  {
-    pergunta: "Qual desses clubes já representou o Espírito Santo na Copa do Brasil?",
-    opcoes: ["Serra FC", "Real Noroeste", "Ambos", "Nenhum"],
-    respostaCorreta: 2
-  },
-  {
-    pergunta: "Qual dessas funções também faz parte das responsabilidades da FES?",
-    opcoes: ["Organizar campeonatos de basquete", "Gerir o futebol profissional e de base", "Fiscalizar clubes de fora do estado", "Administrar ginásios municipais"],
-    respostaCorreta: 1
-  },
-  {
-    pergunta: "Em que década foi criada a Taça Cidade de Vitória, torneio tradicional do futebol capixaba?",
-    opcoes: ["1960", "1970", "1980", "1990"],
-    respostaCorreta: 0
-  },
-  {
-    pergunta: "Qual desses clubes tem o apelido de 'Tigre da Barra'?",
-    opcoes: ["Linhares FC", "Vilavelhense", "Serra FC", "Nova Venécia"],
-    respostaCorreta: 1
-  },
-  {
-    pergunta: "Qual estádio foi usado como centro de treinamento durante a Copa do Mundo de 2014 no ES?",
-    opcoes: ["Kléber Andrade", "Araripe", "Sumaré", "Roberto Siqueira"],
-    respostaCorreta: 0
-  }
-]
+            
+ {
+"pergunta": "Qual clube mineiro detém o maior número de títulos do Campeonato Mineiro?",
+"opcoes": ["Atlético-MG", "Cruzeiro", "América-MG", "Villa Nova"],
+"respostaCorreta": 1
+},
+{
+"pergunta": "Qual é o endereço da sede atual da FMF em Belo Horizonte?",
+"opcoes": ["Rua da Bahia, 888", "Rua Piauí, 1977", "Avenida Afonso Pena, 500", "Praça da Liberdade, 200"],
+"respostaCorreta": 2
+},
+{
+"pergunta": "Qual competição de base é organizada pela FMF e reconhecida nacionalmente?",
+"opcoes": ["Copa São Paulo de Futebol Júnior", "Copa do Brasil Sub-20", "Taça BH de Futebol Sub-17", "Supercopa Sub-15"],
+"respostaCorreta": 3
+},
+{
+"pergunta": "Qual foi o primeiro presidente da Liga Mineira de Esportes Atléticos?",
+"opcoes": ["Adriano Aro", "Elmer Guilherme", "Célio Carrão de Castro", "José Guilherme Ferreira"],
+"respostaCorreta": 3
+},
+{
+"pergunta": "Em que período o Campeonato Mineiro de 2024 - Módulo I foi disputado?",
+"opcoes": ["De maio a agosto", "De setembro a dezembro", "De março a junho", "De janeiro a abril"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Qual família tem controlado a FMF por décadas?",
+"opcoes": ["Família Aro", "Família Ferreira", "Família Castro", "Família Guilherme"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Quantos clubes participaram do Campeonato Mineiro Módulo I de 2024?",
+"opcoes": ["10", "14", "8", "12"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Qual foi a primeira sede da FMF?",
+"opcoes": ["Rua da Bahia, 1000", "Avenida Afonso Pena, 500", "Praça da Liberdade, 200", "Rua dos Guaorajaras, 671"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Em que ano a FMF anunciou as mudanças no regulamento para o Mineiro de 2025?",
+"opcoes": ["2023", "2025", "2026", "2024"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Além do Campeonato Mineiro Módulo I, qual outra competição principal a FMF organiza?",
+"opcoes": ["Copa do Brasil", "Campeonato Brasileiro Série A", "Campeonato Mineiro Segunda Divisão", "Libertadores"],
+"respostaCorreta": 3
+}
 
 
-;
+];
 
         let perguntaAtual = 0;
         let acertos = 0;
@@ -326,6 +326,8 @@
         atualizarStatus();
         mostrarPergunta();
     </script>
+
+
 
 <!-- Bloco de anúncio AdSense -->
 <div style="margin: 40px 0; display: flex; justify-content: center;">
