--- a/quizmg07.html
+++ b/quizmg07.html
@@ -20,9 +20,11 @@
   <button onclick="window.location.href='index.html'">Página Inicial</button>
 </section>
 
-
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1074669766193195"
      crossorigin="anonymous"></script>
+
+
+
 
 
 <style>
@@ -166,63 +168,59 @@
         }
 
         const perguntas = [
-  {
-    pergunta: "Qual é o nome do clássico regional entre Rio Branco-ES e Desportiva Ferroviária?",
-    opcoes: ["Clássico Capixaba", "Clássico dos Campeões", "Clássico do Oceano", "Clássico dos Gigantes"],
-    respostaCorreta: 2
-  },
-  {
-    pergunta: "Qual dessas iniciativas costuma atrair patrocinadores estaduais para o futebol capixaba?",
-    opcoes: ["Projetos sociais e de base", "Apenas transmissão por rádio", "Venda de camisas antigas", "Gincanas de torcedores"],
-    respostaCorreta: 0
-  },
-  {
-    pergunta: "Qual é o principal critério técnico usado pela FES para aprovar um estádio para jogos profissionais?",
-    opcoes: ["Capacidade mínima de público", "Condições de segurança e vestiários adequados", "Proximidade da capital", "Possuir iluminação colorida no campo"],
-    respostaCorreta: 1
-  },
-  {
-    pergunta: "Que tipo de premiação a FES costuma entregar ao clube com melhor comportamento disciplinar na competição?",
-    opcoes: ["Bônus financeiro", "Troféu Fair Play", "Vaga extra em torneio amistoso", "Isenção de taxa no ano seguinte"],
-    respostaCorreta: 1
-  },
-  {
-    pergunta: "Qual dessas modalidades de futebol a FES apoia em projetos estaduais de formação?",
-    opcoes: ["Futsal escolar", "Beach soccer regional", "Futebol feminino de base", "Todas as anteriores"],
-    respostaCorreta: 3
-  },
-  {
-    pergunta: "Qual é o nome dado ao programa de arbitragem que promove reciclagem anual de árbitros no estado?",
-    opcoes: ["Projeto Árbitro Capixaba", "FormarApito ES", "Curso de Atualização de Arbitragem", "Apito Certo"], 
-    respostaCorreta: 2
-  },
-  {
-    pergunta: "Qual destas ações a FES pode aplicar contra um clube que não regularizar documentação?",
-    opcoes: ["Multa e suspensão de inscrição", "Apenas advertência verbal", "Retirada do título anterior", "Pagamentos obrigatórios à torcida"],
-    respostaCorreta: 0
-  },
-  {
-    pergunta: "Qual é a principal finalidade da Copa Espírito Santo (Copa ES)?",
-    opcoes: ["Definir o campeão estadual absoluto", "Selecionar arbitragem internacional", "Conceder vagas em competições nacionais e revelar clubes"], 
-    respostaCorreta: 2
-  },
-  {
-    pergunta: "Qual desses prêmios individuais costuma existir no Campeonato Capixaba ao final da edição?",
-    opcoes: ["Artilheiro do campeonato", "Melhor técnico do torneio", "Defesa menos vazada", "Todas as anteriores"],
-    respostaCorreta: 3
-  },
-  {
-    pergunta: "Qual ação a FES realiza para incentivar a presença de público nos jogos menores?",
-    opcoes: ["Campanhas escolares e ingressos promocionais", "Exigir público mínimo por lei", "Proibir crianças nos jogos", "Só transmitir jogos por pay-per-view"],
-    respostaCorreta: 0
-  }
-]
+            
+{
+"pergunta": "Qual é o total de edições disputadas do Campeonato Mineiro até o final de 2024?",
+"opcoes": ["110", "111", "109", "112"],
+"respostaCorreta": 1
+},
+{
+"pergunta": "Qual família manteve o controle da FMF desde a década de 1960?",
+"opcoes": ["Família Castro", "Família Aro", "Família Ferreira", "Família Guilherme"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Em que ano a FMF homologou o título de 1925 do Campeonato Mineiro para o América-MG?",
+"opcoes": ["2010", "2012", "2005", "2015"],
+"respostaCorreta": 2
+},
+{
+"pergunta": "Qual é o mandato do presidente Adriano Aro na FMF até o final de 2025?",
+"opcoes": ["2018-2022", "2022-2026", "2026-2030", "2014-2018"],
+"respostaCorreta": 2
+},
+{
+"pergunta": "Quantas equipes foram promovidas do Módulo II para o Módulo I em 2025?",
+"opcoes": ["1", "2", "3", "4"],
+"respostaCorreta": 2
+},
+{
+"pergunta": "Qual é o critério de rebaixamento para o Campeonato Mineiro de 2025?",
+"opcoes": ["Triangular final", "Pênaltis na semifinal", "Duas últimas da classificação geral na primeira fase", "Jogos de ida e volta na final"],
+"respostaCorreta": 3
+},
+{
+"pergunta": "Em que data exata a FMF foi fundada em 1915?",
+"opcoes": ["5 de março", "10 de junho de 1920", "22 de abril de 1930", "15 de agosto de 1925"],
+"respostaCorreta": 1
+},
+{
+"pergunta": "Qual é o período de realização do Campeonato Mineiro Módulo I de 2025?",
+"opcoes": ["De maio a agosto", "De setembro a dezembro", "De março a junho", "18 de janeiro a 15 de março"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Qual é a principal competição de base organizada pela FMF, considerada a segunda mais importante do Brasil para sub-17?",
+"opcoes": ["Copa São Paulo de Futebol Júnior", "Copa do Brasil Sub-20", "Supercopa Sub-15", "Taça BH de Futebol Sub-17"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Em que ano foi anunciada a mudança da Taça BH para a categoria Sub-17?",
+"opcoes": ["2013", "2014", "2015", "2017"],
+"respostaCorreta": 3
+}
 
-
-
-
-
-;
+];
 
         let perguntaAtual = 0;
         let acertos = 0;
@@ -327,6 +325,8 @@
         atualizarStatus();
         mostrarPergunta();
     </script>
+
+
 
 <!-- Bloco de anúncio AdSense -->
 <div style="margin: 40px 0; display: flex; justify-content: center;">
