--- a/quizmg08.html
+++ b/quizmg08.html
@@ -15,15 +15,17 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Quiz Futebol</title>
 
-
 <!-- Botões de ação -->
     <section class="action-buttons">
   <button onclick="window.location.href='index.html'">Página Inicial</button>
 </section>
 
-
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1074669766193195"
      crossorigin="anonymous"></script>
+
+
+
+
 
 <style>
     body {
@@ -166,64 +168,59 @@
         }
 
         const perguntas = [
-  {
-    pergunta: "Qual é o nome do principal prêmio individual entregue ao melhor jogador do Campeonato Capixaba?",
-    opcoes: ["Bola de Ouro Capixaba", "Craque do Capixabão", "Prêmio Melhor Jogador", "Chuteira de Ouro"],
-    respostaCorreta: 2
-  },
-  {
-    pergunta: "Qual dessas ações costuma aumentar a receita dos clubes capixabas além da venda de ingressos?",
-    opcoes: ["Doações municipais", "Multas aplicadas pela FES", "Venda de atletas para clubes maiores", "Proibição de merchandising"],
-    respostaCorreta: 3
-  },
-  {
-    pergunta: "Qual é o principal objetivo das escolinhas ligadas a clubes do Espírito Santo?",
-    opcoes: ["Recolher impostos locais", "Formar árbitros profissionais", "Revelar e formar jovens atletas", "Organizar torneios internacionais"],
-    respostaCorreta: 2
-  },
-  {
-    pergunta: "Qual desses formatos de competição a FES costuma usar para decidir um campeão em torneios curtos?",
-    opcoes: ["Grupo único com todos se enfrentando", "Chave dupla com ida e volta e final", "Eliminação simples direto", "Série de pontos corridos em dois turnos"],
-    respostaCorreta: 1
-  },
-  {
-    pergunta: "Que tipo de apoio financeiro a FES pode oferecer a clubes amadores em projetos sociais?",
-    opcoes: ["Empréstimos a juros altos", "Patrocínio integral da folha salarial", "Doações para reforma de quadras"], 
-    respostaCorreta: 3
-  },
-  {
-    pergunta: "Qual é a principal finalidade das competições femininas organizadas pela FES?",
-    opcoes: ["Promover a modalidade e dar acesso a torneios nacionais", "Gerar renda exclusiva para árbitras", "Incentivar importação de jogadoras", "Reunir ex-jogadoras apenas para amistosos"],
-    respostaCorreta: 0
-  },
-  {
-    pergunta: "Qual desses perfis costuma ser requisito para um clube se inscrever na Série A do Campeonato Capixaba?",
-    opcoes: ["Ter torcida mínima de 10 mil pagantes por jogo", "Estar em dia com a documentação e certidões", "Ser fundado há mais de 50 anos", "Possuir centro de treinamento internacional"],
-    respostaCorreta: 1
-  },
-  {
-    pergunta: "Qual é o principal canal usado atualmente para a FES divulgar tabelas e comunicados oficiais?",
-    opcoes: ["Jornais impressos locais", "Rádio comunitária", "Site e redes sociais oficiais", "Anúncios em ônibus urbanos"],
-    respostaCorreta: 2
-  },
-  {
-    pergunta: "O que costuma determinar o rebaixamento de um clube na competição estadual?",
-    opcoes: ["Sorteio entre os últimos colocados", "Número de cartões recebidos", "Posição na tabela ao final da fase regular", "Quantidade de sócios-torcedores cadastrados"],
-    respostaCorreta: 3
-  },
-  {
-    pergunta: "Qual dessas iniciativas veteranas já foi lançada por clubes capixabas para aproximar a base da torcida?",
-    opcoes: ["Programas de sócio-torcedor", "Venda exclusiva por catálogo", "Proibição de bandeiras", "Exclusão de menores de idade"],
-    respostaCorreta: 0
-  }
-]
+            
+{
+"pergunta": "Qual é o número total de títulos do Campeonato Mineiro conquistados pelo Cruzeiro até o final de 2024?",
+"opcoes": ["38", "40", "36", "42"],
+"respostaCorreta": 1
+},
+{
+"pergunta": "Qual é o endereço exato da sede atual da FMF em Belo Horizonte?",
+"opcoes": ["Rua da Bahia, 888", "Praça da Liberdade, 200", "Avenida Afonso Pena, 500", "Avenida Olegário Maciel, 311"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Em que ano o Atlético-MG conquistou seu 50º título do Campeonato Mineiro?",
+"opcoes": ["2024", "2023", "2025", "2022"],
+"respostaCorreta": 1
+},
+{
+"pergunta": "Qual foi o primeiro torneio organizado pela LMSA em seu ano de fundação?",
+"opcoes": ["Campeonato do Interior", "Taça BH Sub-17", "Campeonato Citadino de Belo Horizonte", "Módulo II"],
+"respostaCorreta": 3
+},
+{
+"pergunta": "Qual clube de Minas Gerais tem a maior sequência de títulos consecutivos no Campeonato Mineiro?",
+"opcoes": ["Atlético-MG", "Cruzeiro", "América-MG", "Vila Nova"],
+"respostaCorreta": 3
+},
+{
+"pergunta": "Em que ano a FMF foi transformada a partir da LMDT em federação oficial?",
+"opcoes": ["1918", "1920", "1915", "1930"],
+"respostaCorreta": 2
+},
+{
+"pergunta": "Qual é o número de edições oficiais do Campeonato Mineiro até 2024, incluindo homologações?",
+"opcoes": ["110", "112", "111", "109"],
+"respostaCorreta": 3
+},
+{
+"pergunta": "Qual competição de futsal ou futebol de campo secundário a FMF organiza além dos módulos principais?",
+"opcoes": ["Copa do Brasil Sub-20", "Campeonato Mineiro de Futsal", "Taça BH Sub-17", "Supercopa Mineira"],
+"respostaCorreta": 3
+},
+{
+"pergunta": "Em que ano a família Ferreira assumiu o controle da FMF pela primeira vez?",
+"opcoes": ["1966", "1950", "1970", "1960"],
+"respostaCorreta": 1
+},
+{
+"pergunta": "Qual foi o campeão do Campeonato Mineiro do Interior em 2024?",
+"opcoes": ["Tombense", "Uberlândia", "Urt", "Anápolis"],
+"respostaCorreta": 1
+}
 
-
-
-
-
-
-;
+];
 
         let perguntaAtual = 0;
         let acertos = 0;
@@ -330,6 +327,7 @@
     </script>
 
 
+
 <!-- Bloco de anúncio AdSense -->
 <div style="margin: 40px 0; display: flex; justify-content: center;">
   <ins class="adsbygoogle"
@@ -341,9 +339,7 @@
   <script>
        (adsbygoogle = window.adsbygoogle || []).push({});
   </script>
-
 </div>
-
 
 
 </body>
