--- a/quizrj03.html
+++ b/quizrj03.html
@@ -15,15 +15,17 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Quiz Futebol</title>
 
-
 <!-- Botões de ação -->
     <section class="action-buttons">
   <button onclick="window.location.href='index.html'">Página Inicial</button>
 </section>
 
-
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1074669766193195"
      crossorigin="anonymous"></script>
+
+
+
+
 
 <style>
     body {
@@ -166,59 +168,64 @@
         }
 
         const perguntas = [
-  {
-    pergunta: "Qual clube capixaba conquistou o Campeonato Capixaba de 2024?",
-    opcoes: ["Vitória-ES", "Real Noroeste", "Serra FC", "Rio Branco-ES"],
-    respostaCorreta: 1
-  },
-  {
-    pergunta: "Qual cidade sediou a decisão da Copa Espírito Santo de 2023?",
-    opcoes: ["Linhares", "Águia Branca", "Cariacica", "Serra"],
-    respostaCorreta: 3
-  },
-  {
-    pergunta: "Qual é o nome do torneio de base promovido pela FES para jovens de até 17 anos?",
-    opcoes: ["Campeonato Capixaba Sub-17", "Copa FES de Juniores", "Torneio Esperança", "Taça Capixaba Juvenil"],
-    respostaCorreta: 0
-  },
-  {
-    pergunta: "Qual clube tem o apelido de 'Tricolor Serrano'?",
-    opcoes: ["Desportiva Ferroviária", "Serra FC", "Vitória-ES", "Vilavelhense"],
-    respostaCorreta: 1
-  },
-  {
-    pergunta: "O estádio Sumaré está localizado em qual cidade capixaba?",
-    opcoes: ["São Mateus", "Colatina", "Vitória", "Vila Velha"],
-    respostaCorreta: 0
-  },
-  {
-    pergunta: "Qual dessas competições estaduais garante vaga na Série D do Campeonato Brasileiro?",
-    opcoes: ["Supercopa Capixaba", "Campeonato Capixaba", "Copa ES", "Torneio Início"],
-    respostaCorreta: 1
-  },
-  {
-    pergunta: "Qual desses clubes foi fundado por funcionários da antiga Companhia Vale do Rio Doce?",
-    opcoes: ["Desportiva Ferroviária", "Rio Branco-ES", "Vitória-ES", "Vilavelhense"],
-    respostaCorreta: 0
-  },
-  {
-    pergunta: "Qual jogador capixaba se destacou nacionalmente jogando pelo Flamengo nos anos 1980?",
-    opcoes: ["Zico", "Adílio", "Bebeto", "Tita"],
-    respostaCorreta: 3
-  },
-  {
-    pergunta: "Quantas federações estaduais de futebol existem oficialmente filiadas à CBF, incluindo a FES?",
-    opcoes: ["26", "27", "28", "25"],
-    respostaCorreta: 1
-  },
-  {
-    pergunta: "Qual é o nome da competição promovida pela FES para clubes femininos?",
-    opcoes: ["Copa Espírito Santo Feminina", "Campeonato Capixaba Feminino", "Superliga Capixaba", "Taça das Estrelas"],
-    respostaCorreta: 1
-  }
-]
 
-;
+
+            
+{
+"pergunta": "Qual clube tem o maior número de tricampeonatos no Campeonato Carioca?",
+"opcoes": ["Fluminense", "Vasco da Gama", "Flamengo", "Botafogo"],
+"respostaCorreta": 3
+},
+{
+"pergunta": "Em que ano a FERJ foi fundada pela fusão da FCF e da FFD?",
+"opcoes": ["1977", "1980", "1979", "1978"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Qual foi o primeiro torneio organizado pela FERJ em 1979?",
+"opcoes": ["Copa Rio", "Campeonato Estadual Especial", "Taça Guanabara", "Campeonato de Base"],
+"respostaCorreta": 2
+},
+{
+"pergunta": "Qual é o endereço da primeira sede da FERJ?",
+"opcoes": ["Rua da Assembléia, 671", "Avenida Rio Branco, 81", "Praça da República, 200", "Rua do Ouvidor, 161"],
+"respostaCorreta": 2
+},
+{
+"pergunta": "Qual foi o vice-campeão da Copa Rio de 2024?",
+"opcoes": ["Boavista", "Portuguesa-RJ", "Olaria", "Maricá"],
+"respostaCorreta": 3
+},
+{
+"pergunta": "Quantas equipes disputaram a Série B1 do Campeonato Carioca em 2024?",
+"opcoes": ["12", "8", "10", "9"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Qual é o principal critério de desempate na Taça Guanabara do Campeonato Carioca de 2025?",
+"opcoes": ["Saldo de gols", "Número de vitórias", "Confronto direto", "Gols marcados"],
+"respostaCorreta": 2
+},
+{
+"pergunta": "Em que ano começou o mandato atual de Rubens Lopes na FERJ?",
+"opcoes": ["2022", "2023", "2019", "2020"],
+"respostaCorreta": 2
+},
+{
+"pergunta": "Qual é o número total de títulos do Flamengo no Campeonato Carioca até 2024?",
+"opcoes": ["37", "38", "39", "36"],
+"respostaCorreta": 2
+},
+{
+"pergunta": "Em que ano a FERJ homologou o título de 1937 do São Cristóvão?",
+"opcoes": ["2022", "2023", "2021", "2024"],
+"respostaCorreta": 2
+}
+
+
+
+
+];
 
         let perguntaAtual = 0;
         let acertos = 0;
@@ -324,6 +331,8 @@
         mostrarPergunta();
     </script>
 
+
+
 <!-- Bloco de anúncio AdSense -->
 <div style="margin: 40px 0; display: flex; justify-content: center;">
   <ins class="adsbygoogle"
@@ -336,6 +345,7 @@
        (adsbygoogle = window.adsbygoogle || []).push({});
   </script>
 </div>
+
 
 </body>
 </html>
