--- a/quizrj04.html
+++ b/quizrj04.html
@@ -15,16 +15,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Quiz Futebol</title>
 
-
 <!-- Botões de ação -->
     <section class="action-buttons">
   <button onclick="window.location.href='index.html'">Página Inicial</button>
 </section>
 
-
-
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1074669766193195"
      crossorigin="anonymous"></script>
+
+
+
 
 
 <style>
@@ -168,60 +168,63 @@
         }
 
         const perguntas = [
-  {
-    pergunta: "Qual clube capixaba é conhecido como 'Alvianil de Bento Ferreira'?",
-    opcoes: ["Vitória-ES", "Rio Branco-ES", "Serra FC", "Vilavelhense"],
-    respostaCorreta: 0
-  },
-  {
-    pergunta: "Em que ano o Estádio Kléber Andrade foi reinaugurado após reforma completa?",
-    opcoes: ["2014", "2010", "2016", "2012"],
-    respostaCorreta: 0
-  },
-  {
-    pergunta: "Qual desses clubes conquistou a Copa Espírito Santo em 2022?",
-    opcoes: ["Nova Venécia", "Real Noroeste", "Desportiva Ferroviária", "Vitória-ES"],
-    respostaCorreta: 0
-  },
-  {
-    pergunta: "Qual é o principal objetivo da Supercopa Capixaba?",
-    opcoes: ["Decidir o acesso à Série D", "Unir os campeões do Capixabão e da Copa ES", "Selecionar atletas para a base da FES", "Revelar novos árbitros"],
-    respostaCorreta: 1
-  },
-  {
-    pergunta: "Em que cidade fica localizado o Estádio Engenheiro Araripe, casa da Desportiva Ferroviária?",
-    opcoes: ["Vila Velha", "Cariacica", "Vitória", "Serra"],
-    respostaCorreta: 1
-  },
-  {
-    pergunta: "Qual desses clubes já representou o Espírito Santo na Copa do Brasil?",
-    opcoes: ["Serra FC", "Real Noroeste", "Ambos", "Nenhum"],
-    respostaCorreta: 2
-  },
-  {
-    pergunta: "Qual dessas funções também faz parte das responsabilidades da FES?",
-    opcoes: ["Organizar campeonatos de basquete", "Gerir o futebol profissional e de base", "Fiscalizar clubes de fora do estado", "Administrar ginásios municipais"],
-    respostaCorreta: 1
-  },
-  {
-    pergunta: "Em que década foi criada a Taça Cidade de Vitória, torneio tradicional do futebol capixaba?",
-    opcoes: ["1960", "1970", "1980", "1990"],
-    respostaCorreta: 0
-  },
-  {
-    pergunta: "Qual desses clubes tem o apelido de 'Tigre da Barra'?",
-    opcoes: ["Linhares FC", "Vilavelhense", "Serra FC", "Nova Venécia"],
-    respostaCorreta: 1
-  },
-  {
-    pergunta: "Qual estádio foi usado como centro de treinamento durante a Copa do Mundo de 2014 no ES?",
-    opcoes: ["Kléber Andrade", "Araripe", "Sumaré", "Roberto Siqueira"],
-    respostaCorreta: 0
-  }
-]
 
 
-;
+            
+{
+"pergunta": "Qual clube tem o maior número de tricampeonatos no Campeonato Carioca?",
+"opcoes": ["Vasco da Gama", "Botafogo", "Fluminense", "Flamengo"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Em que ano a FERJ foi fundada pela fusão da FCF e da FFD?",
+"opcoes": ["1979", "1978", "1980", "1977"],
+"respostaCorreta": 2
+},
+{
+"pergunta": "Qual foi o primeiro torneio organizado pela FERJ em 1979?",
+"opcoes": ["Taça Guanabara", "Campeonato Estadual Especial", "Copa Rio", "Campeonato de Base"],
+"respostaCorreta": 2
+},
+{
+"pergunta": "Qual é o endereço da primeira sede da FERJ?",
+"opcoes": ["Rua do Ouvidor, 161", "Praça da República, 200", "Avenida Rio Branco, 81", "Rua da Assembléia, 671"],
+"respostaCorreta": 3
+},
+{
+"pergunta": "Qual foi o vice-campeão da Copa Rio de 2024?",
+"opcoes": ["Portuguesa-RJ", "Boavista", "Maricá", "Olaria"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Quantas equipes disputaram a Série B1 do Campeonato Carioca em 2024?",
+"opcoes": ["12", "10", "8", "9"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Qual é o principal critério de desempate na Taça Guanabara do Campeonato Carioca de 2025?",
+"opcoes": ["Confronto direto", "Gols marcados", "Saldo de gols", "Número de vitórias"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Em que ano começou o mandato atual de Rubens Lopes na FERJ?",
+"opcoes": ["2022", "2020", "2019", "2023"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Qual é o número total de títulos do Flamengo no Campeonato Carioca até 2024?",
+"opcoes": ["37", "39", "38", "36"],
+"respostaCorreta": 3
+},
+{
+"pergunta": "Em que ano a FERJ homologou o título de 1937 do São Cristóvão?",
+"opcoes": ["2022", "2021", "2024", "2023"],
+"respostaCorreta": 4
+}
+
+
+
+];
 
         let perguntaAtual = 0;
         let acertos = 0;
@@ -326,6 +329,8 @@
         atualizarStatus();
         mostrarPergunta();
     </script>
+
+
 
 <!-- Bloco de anúncio AdSense -->
 <div style="margin: 40px 0; display: flex; justify-content: center;">
