--- a/quizrj08.html
+++ b/quizrj08.html
@@ -15,15 +15,17 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Quiz Futebol</title>
 
-
 <!-- Botões de ação -->
     <section class="action-buttons">
   <button onclick="window.location.href='index.html'">Página Inicial</button>
 </section>
 
-
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1074669766193195"
      crossorigin="anonymous"></script>
+
+
+
+
 
 <style>
     body {
@@ -166,64 +168,63 @@
         }
 
         const perguntas = [
-  {
-    pergunta: "Qual é o nome do principal prêmio individual entregue ao melhor jogador do Campeonato Capixaba?",
-    opcoes: ["Bola de Ouro Capixaba", "Craque do Capixabão", "Prêmio Melhor Jogador", "Chuteira de Ouro"],
-    respostaCorreta: 2
-  },
-  {
-    pergunta: "Qual dessas ações costuma aumentar a receita dos clubes capixabas além da venda de ingressos?",
-    opcoes: ["Doações municipais", "Multas aplicadas pela FES", "Venda de atletas para clubes maiores", "Proibição de merchandising"],
-    respostaCorreta: 3
-  },
-  {
-    pergunta: "Qual é o principal objetivo das escolinhas ligadas a clubes do Espírito Santo?",
-    opcoes: ["Recolher impostos locais", "Formar árbitros profissionais", "Revelar e formar jovens atletas", "Organizar torneios internacionais"],
-    respostaCorreta: 2
-  },
-  {
-    pergunta: "Qual desses formatos de competição a FES costuma usar para decidir um campeão em torneios curtos?",
-    opcoes: ["Grupo único com todos se enfrentando", "Chave dupla com ida e volta e final", "Eliminação simples direto", "Série de pontos corridos em dois turnos"],
-    respostaCorreta: 1
-  },
-  {
-    pergunta: "Que tipo de apoio financeiro a FES pode oferecer a clubes amadores em projetos sociais?",
-    opcoes: ["Empréstimos a juros altos", "Patrocínio integral da folha salarial", "Doações para reforma de quadras"], 
-    respostaCorreta: 3
-  },
-  {
-    pergunta: "Qual é a principal finalidade das competições femininas organizadas pela FES?",
-    opcoes: ["Promover a modalidade e dar acesso a torneios nacionais", "Gerar renda exclusiva para árbitras", "Incentivar importação de jogadoras", "Reunir ex-jogadoras apenas para amistosos"],
-    respostaCorreta: 0
-  },
-  {
-    pergunta: "Qual desses perfis costuma ser requisito para um clube se inscrever na Série A do Campeonato Capixaba?",
-    opcoes: ["Ter torcida mínima de 10 mil pagantes por jogo", "Estar em dia com a documentação e certidões", "Ser fundado há mais de 50 anos", "Possuir centro de treinamento internacional"],
-    respostaCorreta: 1
-  },
-  {
-    pergunta: "Qual é o principal canal usado atualmente para a FES divulgar tabelas e comunicados oficiais?",
-    opcoes: ["Jornais impressos locais", "Rádio comunitária", "Site e redes sociais oficiais", "Anúncios em ônibus urbanos"],
-    respostaCorreta: 2
-  },
-  {
-    pergunta: "O que costuma determinar o rebaixamento de um clube na competição estadual?",
-    opcoes: ["Sorteio entre os últimos colocados", "Número de cartões recebidos", "Posição na tabela ao final da fase regular", "Quantidade de sócios-torcedores cadastrados"],
-    respostaCorreta: 3
-  },
-  {
-    pergunta: "Qual dessas iniciativas veteranas já foi lançada por clubes capixabas para aproximar a base da torcida?",
-    opcoes: ["Programas de sócio-torcedor", "Venda exclusiva por catálogo", "Proibição de bandeiras", "Exclusão de menores de idade"],
-    respostaCorreta: 0
-  }
-]
+
+
+            
+{
+"pergunta": "Qual clube carioca detém o recorde de tetracampeonato consecutivo no Campeonato Carioca?",
+"opcoes": ["Vasco da Gama", "Flamengo", "Botafogo", "Fluminense"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Em que data exata foi fundada a FERJ pela fusão da FCF e FFD?",
+"opcoes": ["15 de março de 1979", "22 de abril de 1980", "29 de setembro de 1978", "10 de junho de 1977"],
+"respostaCorreta": 3
+},
+{
+"pergunta": "Qual foi o primeiro campeonato unificado sob a FERJ em 1979?",
+"opcoes": ["Campeonato de Base", "Copa Rio", "Taça Guanabara", "Campeonato Estadual Especial"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Qual é o endereço histórico da primeira sede da FERJ?",
+"opcoes": ["Rua do Ouvidor, 161", "Praça da República, 200", "Rua da Assembléia, 671", "Avenida Rio Branco, 81"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Qual clube foi vice-campeão da Copa Rio de 2024?",
+"opcoes": ["Maricá", "Boavista", "Portuguesa-RJ", "Olaria"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Quantas equipes disputaram a Série B1 do Campeonato Carioca em 2024?",
+"opcoes": ["8", "10", "12", "9"],
+"respostaCorreta": 2
+},
+{
+"pergunta": "Qual é o principal critério de desempate na Taça Guanabara de 2025?",
+"opcoes": ["Confronto direto", "Gols marcados", "Número de vitórias", "Saldo de gols"],
+"respostaCorreta": 3
+},
+{
+"pergunta": "Qual é o mandato atual de Rubens Lopes na FERJ em 2025?",
+"opcoes": ["2022-2026", "2026-2030", "2018-2022", "2023-2027"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Qual é o número de edições do Campeonato Carioca até 2024?",
+"opcoes": ["125", "127", "123", "126"],
+"respostaCorreta": 2
+},
+{
+"pergunta": "Em que ano a FERJ homologou títulos históricos como o de 1937 do São Cristóvão?",
+"opcoes": ["2023", "2005", "2015", "2012"],
+"respostaCorreta": 1
+}
 
 
 
-
-
-
-;
+];
 
         let perguntaAtual = 0;
         let acertos = 0;
@@ -330,6 +331,7 @@
     </script>
 
 
+
 <!-- Bloco de anúncio AdSense -->
 <div style="margin: 40px 0; display: flex; justify-content: center;">
   <ins class="adsbygoogle"
@@ -341,9 +343,7 @@
   <script>
        (adsbygoogle = window.adsbygoogle || []).push({});
   </script>
-
 </div>
-
 
 
 </body>
