--- a/quizsp01.html
+++ b/quizsp01.html
@@ -168,57 +168,57 @@
         }
 
         const perguntas = [
+
+
             
-  {
-    pergunta: "Em que ano a FES foi fundada (com a denominação original 'Liga Sportiva Espírito Santense')?",
-    opcoes: ["1920", "1930", "1917", "1915"],
-    respostaCorreta: 3
-  },
-  {
-    pergunta: "Qual era o nome original da entidade que depois se tornou a FES?",
-    opcoes: ["Federação de Futebol do Espírito Santo", "Federação Esportiva Espírito-Santense", "Liga Sportiva Espírito Santense", "Associação Capixaba de Esportes"],
-    respostaCorreta: 3
-  },
-  {
-    pergunta: "Em que cidade está localizada a sede da FES?",
-    opcoes: ["Vitória", "Vila Velha", "Cariacica", "Serra"],
-    respostaCorreta: 1
-  },
-  {
-    pergunta: "Qual dessas competições é organizada diretamente pela FES?",
-    opcoes: ["Copa do Brasil", "Campeonato Mineiro", "Campeonato Capixaba", "Taça Guanabara"],
-    respostaCorreta: 3
-  },
-  {
-    pergunta: "Qual desses clubes faz parte do 'trio de ferro' do futebol capixaba?",
-    opcoes: ["Botafogo", "Desportiva Ferroviária", "Atlético Mineiro", "Paysandu"],
-    respostaCorreta: 2
-  },
-  {
-    pergunta: "Segundo dados de 2023, qual foi o valor aproximado dos investimentos da FES?",
-    opcoes: ["R$ 10 milhões", "R$ 2 milhões", "R$ 6 milhões", "R$ 8 milhões"],
-    respostaCorreta: 3
-  },
-  {
-    pergunta: "Em que ano a FES anunciou o calendário com 15 competições estaduais?",
-    opcoes: ["2025", "2026", "2024", "2023"],
-    respostaCorreta: 1
-  },
-  {
-    pergunta: "Qual é a principal função da Federação de Futebol do Estado do Espírito Santo?",
-    opcoes: ["Gerenciar apenas times da capital", "Administrar apenas categorias de base", "Promover torneios internacionais", "Organizar o futebol amador e profissional no estado"],
-    respostaCorreta: 4
-  },
-  {
-    pergunta: "A FES é filiada a qual entidade do futebol brasileiro?",
-    opcoes: ["FIFA", "Federação Paulista de Futebol", "Confederação Brasileira de Futebol (CBF)", "CONMEBOL"],
-    respostaCorreta: 3
-  },
-  {
-    pergunta: "Qual é a data oficial de fundação da atual FES, conforme o estatuto?",
-    opcoes: ["28 de abril de 1938", "15 de março de 1950", "21 de setembro de 1984", "02 de maio de 1917"],
-    respostaCorreta: 4
-  }
+{
+"pergunta": "Em que data exata foi fundada a FPF pela fusão da LBF e da LFESP?",
+"opcoes": ["15 de março de 1940", "22 de abril de 1941", "10 de junho de 1939", "29 de setembro de 1942"],
+"respostaCorreta": 2
+},
+{
+"pergunta": "Qual foi o primeiro campeonato unificado sob a FPF em 1941?",
+"opcoes": ["Copa São Paulo de Juniores", "Taça Cidade de São Paulo", "Campeonato Paulista de 1941", "Campeonato de Base"],
+"respostaCorreta": 3
+},
+{
+"pergunta": "Qual é o endereço histórico da primeira sede da FPF?",
+"opcoes": ["Praça da República, 200", "Rua do Ouvidor, 161", "Avenida Rio Branco, 81", "Rua da Assembléia, 671"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Qual clube foi vice-campeão da Copa Paulista de 2024?",
+"opcoes": ["Boavista", "Portuguesa-RJ", "Maricá", "Votuporanguense"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Quantas equipes disputaram a Série A2 do Campeonato Paulista em 2024?",
+"opcoes": ["8", "16", "10", "12"],
+"respostaCorreta": 2
+},
+{
+"pergunta": "Qual é o principal critério de desempate na Taça Paulista de 2025?",
+"opcoes": ["Confronto direto", "Gols marcados", "Saldo de gols", "Número de vitórias"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Qual é o mandato atual de Marco Aurélio Cunha na FPF em 2025?",
+"opcoes": ["2022-2026", "2018-2022", "2026-2030", "2023-2027"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Qual é o número de edições do Campeonato Paulista até 2024?",
+"opcoes": ["125", "123", "126", "127"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Em que ano a FPF homologou títulos históricos como o de 1931 do São Paulo?",
+"opcoes": ["2023", "2005", "2015", "2012"],
+"respostaCorreta": 1
+}
+
+
+
 ];
 
         let perguntaAtual = 0;
