--- a/quizsp03.html
+++ b/quizsp03.html
@@ -15,15 +15,17 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Quiz Futebol</title>
 
-
 <!-- Botões de ação -->
     <section class="action-buttons">
   <button onclick="window.location.href='index.html'">Página Inicial</button>
 </section>
 
-
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1074669766193195"
      crossorigin="anonymous"></script>
+
+
+
+
 
 <style>
     body {
@@ -165,60 +167,57 @@
             document.getElementById("contador").innerText = `Seus Acessos nesta pag: ${contador}`;
         }
 
-        const perguntas = [
-  {
-    pergunta: "Qual clube capixaba conquistou o Campeonato Capixaba de 2024?",
-    opcoes: ["Vitória-ES", "Real Noroeste", "Serra FC", "Rio Branco-ES"],
-    respostaCorreta: 1
-  },
-  {
-    pergunta: "Qual cidade sediou a decisão da Copa Espírito Santo de 2023?",
-    opcoes: ["Linhares", "Águia Branca", "Cariacica", "Serra"],
-    respostaCorreta: 3
-  },
-  {
-    pergunta: "Qual é o nome do torneio de base promovido pela FES para jovens de até 17 anos?",
-    opcoes: ["Campeonato Capixaba Sub-17", "Copa FES de Juniores", "Torneio Esperança", "Taça Capixaba Juvenil"],
-    respostaCorreta: 0
-  },
-  {
-    pergunta: "Qual clube tem o apelido de 'Tricolor Serrano'?",
-    opcoes: ["Desportiva Ferroviária", "Serra FC", "Vitória-ES", "Vilavelhense"],
-    respostaCorreta: 1
-  },
-  {
-    pergunta: "O estádio Sumaré está localizado em qual cidade capixaba?",
-    opcoes: ["São Mateus", "Colatina", "Vitória", "Vila Velha"],
-    respostaCorreta: 0
-  },
-  {
-    pergunta: "Qual dessas competições estaduais garante vaga na Série D do Campeonato Brasileiro?",
-    opcoes: ["Supercopa Capixaba", "Campeonato Capixaba", "Copa ES", "Torneio Início"],
-    respostaCorreta: 1
-  },
-  {
-    pergunta: "Qual desses clubes foi fundado por funcionários da antiga Companhia Vale do Rio Doce?",
-    opcoes: ["Desportiva Ferroviária", "Rio Branco-ES", "Vitória-ES", "Vilavelhense"],
-    respostaCorreta: 0
-  },
-  {
-    pergunta: "Qual jogador capixaba se destacou nacionalmente jogando pelo Flamengo nos anos 1980?",
-    opcoes: ["Zico", "Adílio", "Bebeto", "Tita"],
-    respostaCorreta: 3
-  },
-  {
-    pergunta: "Quantas federações estaduais de futebol existem oficialmente filiadas à CBF, incluindo a FES?",
-    opcoes: ["26", "27", "28", "25"],
-    respostaCorreta: 1
-  },
-  {
-    pergunta: "Qual é o nome da competição promovida pela FES para clubes femininos?",
-    opcoes: ["Copa Espírito Santo Feminina", "Campeonato Capixaba Feminino", "Superliga Capixaba", "Taça das Estrelas"],
-    respostaCorreta: 1
-  }
-]
+        const perguntas = 
 
-;
+
+            
+[
+{
+"pergunta": "Qual foi a data exata de fundação da FPF?",
+"opcoes": ["22 de abril de 1941", "29 de setembro de 1941", "15 de março de 1940", "10 de junho de 1942"],
+"respostaCorreta": 1
+},
+{
+"pergunta": "Qual campeonato marcou a primeira organização oficial da FPF em 1941?",
+"opcoes": ["Taça Cidade de São Paulo", "Campeonato de Base", "Copa São Paulo de Juniores", "Campeonato Paulista de 1941"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Qual é o endereço histórico da primeira sede da FPF em São Paulo?",
+"opcoes": ["Praça da República, 200", "Avenida Brigadeiro Luiz Antônio, 905", "Rua do Ouvidor, 161", "Avenida Rio Branco, 81"],
+"respostaCorreta": 2
+},
+{
+"pergunta": "Qual clube terminou como vice-campeão na Copa Paulista de 2024?",
+"opcoes": ["Votuporanguense", "Maricá", "Portuguesa-RJ", "Boavista"],
+"respostaCorreta": 1
+},
+{
+"pergunta": "Quantas equipes competiram na Série A2 do Campeonato Paulista em 2024?",
+"opcoes": ["10", "12", "8", "16"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Qual é o principal critério de desempate na Taça Paulista de 2025?",
+"opcoes": ["Número de vitórias", "Confronto direto", "Saldo de gols", "Gols marcados"],
+"respostaCorreta": 3
+},
+{
+"pergunta": "Qual é o mandato atual do presidente Reinaldo Carneiro Bastos na FPF em 2025?",
+"opcoes": ["2022-2026", "2023-2027", "2018-2022", "2026-2030"],
+"respostaCorreta": 2
+},
+{
+"pergunta": "Quantas edições oficiais do Campeonato Paulista ocorreram até 2024?",
+"opcoes": ["123", "125", "127", "126"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Em que ano a FPF homologou o título de 1931 do São Paulo FC?",
+"opcoes": ["2015", "2012", "2005", "2017"],
+"respostaCorreta": 4
+}
+]    ;
 
         let perguntaAtual = 0;
         let acertos = 0;
@@ -324,6 +323,8 @@
         mostrarPergunta();
     </script>
 
+
+
 <!-- Bloco de anúncio AdSense -->
 <div style="margin: 40px 0; display: flex; justify-content: center;">
   <ins class="adsbygoogle"
@@ -336,6 +337,7 @@
        (adsbygoogle = window.adsbygoogle || []).push({});
   </script>
 </div>
+
 
 </body>
 </html>
