--- a/quizmg06.html
+++ b/quizmg06.html
@@ -15,7 +15,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Quiz Futebol</title>
 
-
 <!-- Botões de ação -->
     <section class="action-buttons">
   <button onclick="window.location.href='index.html'">Página Inicial</button>
@@ -23,6 +22,9 @@
 
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1074669766193195"
      crossorigin="anonymous"></script>
+
+
+
 
 
 <style>
@@ -166,62 +168,59 @@
         }
 
         const perguntas = [
-  {
-    pergunta: "Qual é o apelido do estádio municipal de Linhares, utilizado em jogos oficiais do Espírito Santo?",
-    opcoes: ["Arena do Norte", "Estádio Glória", "Ninho do Dragão", "Estádio Joaquim Calmon"],
-    respostaCorreta: 0
-  },
-  {
-    pergunta: "Qual regra a FES aplica em caso de empate na final de uma competição estadual (quando não há jogo de volta)?",
-    opcoes: ["Prorrogação seguida de pênaltis", "Melhor campanha no campeonato", "Gol qualificado", "Sorteio entre os clubes"],
-    respostaCorreta: 1
-  },
-  {
-    pergunta: "Qual dessas iniciativas a FES costuma promover para arbitragem local?",
-    opcoes: ["Festival de goleiros", "Curso de formação e atualização para árbitros", "Campeonato de ex-jogadores", "Bolsa de estudo para coaches estrangeiros"],
-    respostaCorreta: 2
-  },
-  {
-    pergunta: "Qual é o principal critério para um clube capixaba ganhar vaga direta na Copa do Brasil pela FES?",
-    opcoes: ["Ter mais torcedores cadastrados", "Ter estádio próprio", "Ser campeão estadual", "Apresentar melhor projeto social"],
-    respostaCorreta: 3
-  },
-  {
-    pergunta: "Qual é o troféu simbólico entregue ao clube com a melhor campanha na fase de grupos do Capixabão (quando existe)?",
-    opcoes: ["Troféu Melhor Campanha", "Taça do Mérito", "Copa Fair Play", "Medalha de Honra ao Mérito"],
-    respostaCorreta: 0
-  },
-  {
-    pergunta: "Qual dessas ações faz parte das políticas de base apoiadas pela FES?",
-    opcoes: ["Pagamento de salários a jogadores profissionais", "Oficinas de formação para treinadores de base", "Construção de estádios internacionais", "Transmissão exclusiva por TV aberta"],
-    respostaCorreta: 1
-  },
-  {
-    pergunta: "Qual dessas agremiações já teve uma parceria para sociedade com clube de outro estado visando intercâmbio de atletas?",
-    opcoes: ["Vitória-ES", "Real Noroeste", "Linhares FC", "Rio Branco-ES"],
-    respostaCorreta: 2
-  },
-  {
-    pergunta: "Qual destes itens costuma constar no regulamento de competições da FES para punição disciplinar?",
-    opcoes: ["Multa por empate", "Suspensão automática por cartão vermelho direto", "Troca de pontos entre clubes", "Liberação de torcedores rivais no mesmo setor"], 
-    respostaCorreta: 3
-  },
-  {
-    pergunta: "Qual modalidade a FES já apoiou como projeto social para inclusão pelo futebol?",
-    opcoes: ["Futebol para pessoas com deficiência (paradesporto)", "Corrida de rua amadora", "Basquete juvenil", "Natação comunitária"],
-    respostaCorreta: 0
-  },
-  {
-    pergunta: "Qual desses números aproxima-se da capacidade do Estádio Kleber Andrade após sua maior reforma?",
-    opcoes: ["12.000", "18.000", "24.000", "22.000"],
-    respostaCorreta: 3
-  }
-]
+            
+{
+"pergunta": "Qual é o número exato de títulos do Campeonato Mineiro conquistados pelo Atlético-MG até o final de 2024?",
+"opcoes": ["48", "50", "49", "51"],
+"respostaCorreta": 3
+},
+{
+"pergunta": "Qual é o endereço atual da sede da Federação Mineira de Futebol em Belo Horizonte?",
+"opcoes": ["Avenida Olegário Maciel, 311", "Rua Piauí, 1977", "Rua da Bahia, 888", "Praça da Liberdade, 200"],
+"respostaCorreta": 1
+},
+{
+"pergunta": "Qual competição de base a FMF organiza anualmente e que é considerada a segunda mais importante do Brasil na categoria Sub-17?",
+"opcoes": ["Supercopa Sub-15", "Copa do Brasil Sub-20", "Copa São Paulo de Futebol Júnior", "Taça BH de Futebol Sub-17"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Em que ano foi anunciada a mudança para a Taça BH ser disputada na categoria Sub-17 em vez de Sub-20?",
+"opcoes": ["2013", "2015", "2017", "2014"],
+"respostaCorreta": 2
+},
+{
+"pergunta": "Qual foi o primeiro torneio oficial organizado pela FMF no ano de sua fundação?",
+"opcoes": ["Campeonato Mineiro do Interior", "Taça BH Sub-17", "Campeonato Mineiro Módulo II", "Campeonato da Cidade"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Qual é o mandato atual do presidente Adriano Guilherme de Aro Ferreira na FMF?",
+"opcoes": ["2022-2026", "2018-2022", "2026-2030", "2014-2018"],
+"respostaCorreta": 1
+},
+{
+"pergunta": "Quantas equipes foram promovidas do Módulo II para o Módulo I do Campeonato Mineiro de 2025?",
+"opcoes": ["1", "3", "2", "4"],
+"respostaCorreta": 3
+},
+{
+"pergunta": "Qual é o novo critério de rebaixamento para o Campeonato Mineiro de 2025?",
+"opcoes": ["Triangular final", "Duas últimas da classificação geral na primeira fase", "Pênaltis na semifinal", "Jogos de ida e volta na final"],
+"respostaCorreta": 2
+},
+{
+"pergunta": "Em que data exata a FMF completa 110 anos de fundação?",
+"opcoes": ["5 de março de 1915", "10 de junho de 1920", "22 de abril de 1930", "15 de agosto de 1925"],
+"respostaCorreta": 1
+},
+{
+"pergunta": "Qual é o período exato de início e fim do Campeonato Mineiro Módulo I de 2025?",
+"opcoes": ["18 de janeiro a 15 de março", "De maio a agosto", "De setembro a dezembro", "De março a junho"],
+"respostaCorreta": 1
+}
 
-
-
-
-;
+];
 
         let perguntaAtual = 0;
         let acertos = 0;
@@ -327,6 +326,8 @@
         mostrarPergunta();
     </script>
 
+
+
 <!-- Bloco de anúncio AdSense -->
 <div style="margin: 40px 0; display: flex; justify-content: center;">
   <ins class="adsbygoogle"
@@ -339,6 +340,7 @@
        (adsbygoogle = window.adsbygoogle || []).push({});
   </script>
 </div>
+
 
 </body>
 </html>
