--- a/quizmg09.html
+++ b/quizmg09.html
@@ -15,15 +15,17 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Quiz Futebol</title>
 
-
 <!-- Botões de ação -->
     <section class="action-buttons">
   <button onclick="window.location.href='index.html'">Página Inicial</button>
 </section>
 
-
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1074669766193195"
      crossorigin="anonymous"></script>
+
+
+
+
 
 <style>
     body {
@@ -166,65 +168,59 @@
         }
 
         const perguntas = [
-  {
-    pergunta: "Qual clube costuma aparecer com mais frequência nas finais do Campeonato Capixaba nas últimas duas décadas?",
-    opcoes: ["Rio Branco-ES", "Serra FC", "Vitória-ES", "Real Noroeste"],
-    respostaCorreta: 0
-  },
-  {
-    pergunta: "Qual documento oficial define o regulamento das competições organizadas pela FES?",
-    opcoes: ["Calendário anual", "Regulamento Geral de Competições", "Comunicado de imprensa", "Boletim Financeiro"],
-    respostaCorreta: 1
-  },
-  {
-    pergunta: "Qual é a principal vantagem para um clube capixaba vencer a Copa Espírito Santo (Copa ES)?",
-    opcoes: ["Isenção de taxas estaduais", "Convite para amistosos internacionais", "Vaga em competições nacionais (ex.: Copa do Brasil)", "Substituição automática do presidente da FES"],
-    respostaCorreta: 2
-  },
-  {
-    pergunta: "Qual destes temas costuma ser alvo de projetos da FES para desenvolvimento social?",
-    opcoes: ["Construção de rodovias", "Cursos de administração pública", "Projetos de inclusão esportiva (base e paradesporto)", "Importação de jogadores estrangeiros"],
-    respostaCorreta: 3
-  },
-  {
-    pergunta: "Qual setor da FES é responsável por organizar e capacitar árbitros no estado?",
-    opcoes: ["Departamento de Arbitragem", "Departamento Médico", "Departamento de Marketing", "Comissão de Estatística"],
-    respostaCorreta: 0
-  },
-  {
-    pergunta: "Qual desses elementos é exigido para um estádio ser homologado pela FES para jogos profissionais?",
-    opcoes: ["Bancos de reservas cobertos", "Iluminação adequada para jogos noturnos", "Vestiários amplos e conformes", "Todas as anteriores"],
-    respostaCorreta: 1
-  },
-  {
-    pergunta: "Qual desses públicos-alvo costuma ser prioridade nas ações de base apoiadas pela FES?",
-    opcoes: ["Apenas atletas profissionais", "Treinadores estrangeiros", "Categorias de base (Sub-13 a Sub-20)", "Sócios-aposentados"],
-    respostaCorreta: 2
-  },
-  {
-    pergunta: "Qual é uma medida habitual da FES para incentivar público em jogos de menor porte?",
-    opcoes: ["Proibir menores de idade", "Aumentar preço dos ingressos", "Campanhas em escolas e ingressos promocionais", "Restringir circulação nas redes sociais"],
-    respostaCorreta: 3
-  },
-  {
-    pergunta: "Em competições oficiais da FES, qual é o procedimento mais comum quando um clube não apresenta documentação regular?",
-    opcoes: ["Conceder vitória automática ao adversário", "Transferir pontuação para outro clube", "Aplicar multa e suspender inscrição até regularização", "Premiar o clube com isenção futura"],
-    respostaCorreta: 0
-  },
-  {
-    pergunta: "Qual dessas ações a FES frequentemente realiza para promover o futebol feminino no estado?",
-    opcoes: ["Negar inscrições de clubes femininos", "Criar torneios e calendários específicos", "Exigir limite de público apenas para jogos femininos", "Proibir transmissões online"],
-    respostaCorreta: 3
-  }
-]
+            
+{
+"pergunta": "Qual clube mineiro conquistou o maior número de títulos consecutivos no Campeonato Mineiro?",
+"opcoes": ["Atlético-MG", "Cruzeiro", "Vila Nova", "América-MG"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Em que ano ocorreu a transformação da LMDT na atual FMF?",
+"opcoes": ["1918", "1939", "1920", "1915"],
+"respostaCorreta": 2
+},
+{
+"pergunta": "Qual foi o primeiro torneio organizado pela FMF em 1915?",
+"opcoes": ["Campeonato Mineiro do Interior", "Taça BH Sub-17", "Campeonato da Cidade", "Campeonato Mineiro Módulo II"],
+"respostaCorreta": 3
+},
+{
+"pergunta": "Qual é o endereço da primeira sede da FMF?",
+"opcoes": ["Rua da Bahia, 1000", "Avenida Afonso Pena, 500", "Praça da Liberdade, 200", "Rua dos Guaorajaras, 671"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Qual foi o campeão do Campeonato Mineiro do Interior em 2024?",
+"opcoes": ["Uberlândia", "Anápolis", "Tombense", "URT"],
+"respostaCorreta": 3
+},
+{
+"pergunta": "Quantas equipes foram promovidas do Módulo II para o Módulo I do Campeonato Mineiro em 2025?",
+"opcoes": ["1", "4", "2", "3"],
+"respostaCorreta": 3
+},
+{
+"pergunta": "Qual é o critério de rebaixamento para o Campeonato Mineiro de 2025?",
+"opcoes": ["Pênaltis na semifinal", "Triangular final", "Jogos de ida e volta na final", "Duas últimas da classificação geral na primeira fase"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Qual é o mandato atual do presidente Adriano Aro na FMF?",
+"opcoes": ["2018-2022", "2026-2030", "2022-2026", "2014-2018"],
+"respostaCorreta": 3
+},
+{
+"pergunta": "Qual é o número de edições oficiais do Campeonato Mineiro até 2024, incluindo homologações?",
+"opcoes": ["112", "109", "111", "110"],
+"respostaCorreta": 3
+},
+{
+"pergunta": "Em que ano a FMF homologou títulos históricos do Campeonato Mineiro?",
+"opcoes": ["2015", "2005", "2012", "2010"],
+"respostaCorreta": 3
+}
 
-
-
-
-
-
-
-;
+];
 
         let perguntaAtual = 0;
         let acertos = 0;
@@ -329,6 +325,8 @@
         atualizarStatus();
         mostrarPergunta();
     </script>
+
+
 
 <!-- Bloco de anúncio AdSense -->
 <div style="margin: 40px 0; display: flex; justify-content: center;">
