--- a/quizrj01.html
+++ b/quizrj01.html
@@ -169,56 +169,58 @@
 
         const perguntas = [
             
-  {
-    pergunta: "Em que ano a FES foi fundada (com a denominação original 'Liga Sportiva Espírito Santense')?",
-    opcoes: ["1920", "1930", "1917", "1915"],
-    respostaCorreta: 3
-  },
-  {
-    pergunta: "Qual era o nome original da entidade que depois se tornou a FES?",
-    opcoes: ["Federação de Futebol do Espírito Santo", "Federação Esportiva Espírito-Santense", "Liga Sportiva Espírito Santense", "Associação Capixaba de Esportes"],
-    respostaCorreta: 3
-  },
-  {
-    pergunta: "Em que cidade está localizada a sede da FES?",
-    opcoes: ["Vitória", "Vila Velha", "Cariacica", "Serra"],
-    respostaCorreta: 1
-  },
-  {
-    pergunta: "Qual dessas competições é organizada diretamente pela FES?",
-    opcoes: ["Copa do Brasil", "Campeonato Mineiro", "Campeonato Capixaba", "Taça Guanabara"],
-    respostaCorreta: 3
-  },
-  {
-    pergunta: "Qual desses clubes faz parte do 'trio de ferro' do futebol capixaba?",
-    opcoes: ["Botafogo", "Desportiva Ferroviária", "Atlético Mineiro", "Paysandu"],
-    respostaCorreta: 2
-  },
-  {
-    pergunta: "Segundo dados de 2023, qual foi o valor aproximado dos investimentos da FES?",
-    opcoes: ["R$ 10 milhões", "R$ 2 milhões", "R$ 6 milhões", "R$ 8 milhões"],
-    respostaCorreta: 3
-  },
-  {
-    pergunta: "Em que ano a FES anunciou o calendário com 15 competições estaduais?",
-    opcoes: ["2025", "2026", "2024", "2023"],
-    respostaCorreta: 1
-  },
-  {
-    pergunta: "Qual é a principal função da Federação de Futebol do Estado do Espírito Santo?",
-    opcoes: ["Gerenciar apenas times da capital", "Administrar apenas categorias de base", "Promover torneios internacionais", "Organizar o futebol amador e profissional no estado"],
-    respostaCorreta: 4
-  },
-  {
-    pergunta: "A FES é filiada a qual entidade do futebol brasileiro?",
-    opcoes: ["FIFA", "Federação Paulista de Futebol", "Confederação Brasileira de Futebol (CBF)", "CONMEBOL"],
-    respostaCorreta: 3
-  },
-  {
-    pergunta: "Qual é a data oficial de fundação da atual FES, conforme o estatuto?",
-    opcoes: ["28 de abril de 1938", "15 de março de 1950", "21 de setembro de 1984", "02 de maio de 1917"],
-    respostaCorreta: 4
-  }
+{
+"pergunta": "Qual clube carioca conquistou o maior número de títulos consecutivos no Campeonato Carioca?",
+"opcoes": ["Flamengo", "Botafogo", "Fluminense", "Vasco da Gama"],
+"respostaCorreta": 1
+},
+{
+"pergunta": "Em que ano ocorreu a transformação da FCF na atual FERJ?",
+"opcoes": ["1978", "1979", "1980", "1977"],
+"respostaCorreta": 1
+},
+{
+"pergunta": "Qual foi o primeiro torneio organizado pela FERJ em 1979?",
+"opcoes": ["Taça Guanabara", "Copa Rio", "Campeonato da Cidade", "Campeonato Carioca de Base"],
+"respostaCorreta": 3
+},
+{
+"pergunta": "Qual é o endereço da primeira sede da FERJ?",
+"opcoes": ["Avenida Rio Branco, 81", "Rua do Ouvidor, 161", "Praça da República, 200", "Rua da Assembléia, 671"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Qual foi o campeão da Copa Rio em 2024?",
+"opcoes": ["Maricá", "Olaria", "Portuguesa-RJ", "Boavista"],
+"respostaCorreta": 1
+},
+{
+"pergunta": "Quantas equipes foram promovidas da Série B1 para a Série A2 do Campeonato Carioca em 2025?",
+"opcoes": ["1", "4", "2", "3"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Qual é o critério de rebaixamento para o Campeonato Carioca de 2025?",
+"opcoes": ["Pênaltis na semifinal", "Triangular final", "Jogos de ida e volta na final", "Último colocado da Taça Guanabara"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Qual é o mandato atual do presidente Rubens Lopes na FERJ?",
+"opcoes": ["2018-2022", "2026-2030", "2022-2026", "2023-2027"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Qual é o número de edições oficiais do Campeonato Carioca até 2024, incluindo homologações?",
+"opcoes": ["126", "123", "127", "125"],
+"respostaCorreta": 3
+},
+{
+"pergunta": "Em que ano a FERJ homologou títulos históricos do Campeonato Carioca?",
+"opcoes": ["2015", "2023", "2005", "2012"],
+"respostaCorreta": 2
+}
+
+
 ];
 
         let perguntaAtual = 0;
