--- a/quizrj06.html
+++ b/quizrj06.html
@@ -15,7 +15,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Quiz Futebol</title>
 
-
 <!-- Botões de ação -->
     <section class="action-buttons">
   <button onclick="window.location.href='index.html'">Página Inicial</button>
@@ -23,6 +22,9 @@
 
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1074669766193195"
      crossorigin="anonymous"></script>
+
+
+
 
 
 <style>
@@ -166,62 +168,63 @@
         }
 
         const perguntas = [
-  {
-    pergunta: "Qual é o apelido do estádio municipal de Linhares, utilizado em jogos oficiais do Espírito Santo?",
-    opcoes: ["Arena do Norte", "Estádio Glória", "Ninho do Dragão", "Estádio Joaquim Calmon"],
-    respostaCorreta: 0
-  },
-  {
-    pergunta: "Qual regra a FES aplica em caso de empate na final de uma competição estadual (quando não há jogo de volta)?",
-    opcoes: ["Prorrogação seguida de pênaltis", "Melhor campanha no campeonato", "Gol qualificado", "Sorteio entre os clubes"],
-    respostaCorreta: 1
-  },
-  {
-    pergunta: "Qual dessas iniciativas a FES costuma promover para arbitragem local?",
-    opcoes: ["Festival de goleiros", "Curso de formação e atualização para árbitros", "Campeonato de ex-jogadores", "Bolsa de estudo para coaches estrangeiros"],
-    respostaCorreta: 2
-  },
-  {
-    pergunta: "Qual é o principal critério para um clube capixaba ganhar vaga direta na Copa do Brasil pela FES?",
-    opcoes: ["Ter mais torcedores cadastrados", "Ter estádio próprio", "Ser campeão estadual", "Apresentar melhor projeto social"],
-    respostaCorreta: 3
-  },
-  {
-    pergunta: "Qual é o troféu simbólico entregue ao clube com a melhor campanha na fase de grupos do Capixabão (quando existe)?",
-    opcoes: ["Troféu Melhor Campanha", "Taça do Mérito", "Copa Fair Play", "Medalha de Honra ao Mérito"],
-    respostaCorreta: 0
-  },
-  {
-    pergunta: "Qual dessas ações faz parte das políticas de base apoiadas pela FES?",
-    opcoes: ["Pagamento de salários a jogadores profissionais", "Oficinas de formação para treinadores de base", "Construção de estádios internacionais", "Transmissão exclusiva por TV aberta"],
-    respostaCorreta: 1
-  },
-  {
-    pergunta: "Qual dessas agremiações já teve uma parceria para sociedade com clube de outro estado visando intercâmbio de atletas?",
-    opcoes: ["Vitória-ES", "Real Noroeste", "Linhares FC", "Rio Branco-ES"],
-    respostaCorreta: 2
-  },
-  {
-    pergunta: "Qual destes itens costuma constar no regulamento de competições da FES para punição disciplinar?",
-    opcoes: ["Multa por empate", "Suspensão automática por cartão vermelho direto", "Troca de pontos entre clubes", "Liberação de torcedores rivais no mesmo setor"], 
-    respostaCorreta: 3
-  },
-  {
-    pergunta: "Qual modalidade a FES já apoiou como projeto social para inclusão pelo futebol?",
-    opcoes: ["Futebol para pessoas com deficiência (paradesporto)", "Corrida de rua amadora", "Basquete juvenil", "Natação comunitária"],
-    respostaCorreta: 0
-  },
-  {
-    pergunta: "Qual desses números aproxima-se da capacidade do Estádio Kleber Andrade após sua maior reforma?",
-    opcoes: ["12.000", "18.000", "24.000", "22.000"],
-    respostaCorreta: 3
-  }
-]
+
+
+            
+{
+"pergunta": "Qual clube carioca tem o maior número de títulos do Campeonato Carioca até 2024?",
+"opcoes": ["Fluminense", "Botafogo", "Vasco da Gama", "Flamengo"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Qual clube tem o segundo maior número de títulos do Campeonato Carioca até 2024?",
+"opcoes": ["Vasco da Gama", "Flamengo", "Botafogo", "Fluminense"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Em que ano a FERJ foi fundada pela fusão da FCF e da FFD?",
+"opcoes": ["1979", "1977", "1980", "1978"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Qual foi o primeiro torneio organizado pela FERJ em 1979?",
+"opcoes": ["Taça Guanabara", "Copa Rio", "Campeonato Estadual Especial", "Campeonato de Base"],
+"respostaCorreta": 3
+},
+{
+"pergunta": "Qual é o endereço da primeira sede da FERJ?",
+"opcoes": ["Rua da Assembléia, 671", "Rua do Ouvidor, 161", "Avenida Rio Branco, 81", "Praça da República, 200"],
+"respostaCorreta": 3
+},
+{
+"pergunta": "Qual foi o campeão da Copa Rio em 2024?",
+"opcoes": ["Portuguesa-RJ", "Boavista", "Olaria", "Maricá"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Quantas equipes disputaram a Série B1 do Campeonato Carioca em 2024?",
+"opcoes": ["12", "10", "8", "9"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Qual é o principal critério de desempate na Taça Guanabara do Campeonato Carioca de 2025?",
+"opcoes": ["Confronto direto", "Saldo de gols", "Número de vitórias", "Gols marcados"],
+"respostaCorreta": 3
+},
+{
+"pergunta": "Qual é o ano de início do mandato atual de Rubens Lopes na FERJ?",
+"opcoes": ["2018", "2022", "2020", "2023"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Qual é o número de edições oficiais do Campeonato Carioca até 2024, incluindo homologações?",
+"opcoes": ["126", "123", "127", "125"],
+"respostaCorreta": 3
+}
 
 
 
-
-;
+];
 
         let perguntaAtual = 0;
         let acertos = 0;
@@ -327,6 +330,8 @@
         mostrarPergunta();
     </script>
 
+
+
 <!-- Bloco de anúncio AdSense -->
 <div style="margin: 40px 0; display: flex; justify-content: center;">
   <ins class="adsbygoogle"
@@ -339,6 +344,7 @@
        (adsbygoogle = window.adsbygoogle || []).push({});
   </script>
 </div>
+
 
 </body>
 </html>
