--- a/quizsp02.html
+++ b/quizsp02.html
@@ -15,15 +15,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Quiz Futebol</title>
 
-
 <!-- Botões de ação -->
     <section class="action-buttons">
   <button onclick="window.location.href='index.html'">Página Inicial</button>
 </section>
 
-
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1074669766193195"
      crossorigin="anonymous"></script>
+
+
+
 
 
 <style>
@@ -166,59 +167,57 @@
             document.getElementById("contador").innerText = `Seus Acessos nesta pag: ${contador}`;
         }
 
-        const perguntas = [
-  {
-    pergunta: "Qual estádio é considerado o principal palco do futebol capixaba?",
-    opcoes: ["Estádio Kléber Andrade", "Engenheiro Araripe", "Maracanã", "Castelão"],
-    respostaCorreta: 0
-  },
-  {
-    pergunta: "Qual clube capixaba já disputou a Série A do Campeonato Brasileiro?",
-    opcoes: ["Vitória-ES", "Rio Branco-ES", "Desportiva Ferroviária", "Linhares FC"],
-    respostaCorreta: 2
-  },
-  {
-    pergunta: "Qual é o município de origem do clube Real Noroeste Capixaba Futebol Clube?",
-    opcoes: ["São Mateus", "Colatina", "Água Doce do Norte", "Águia Branca"],
-    respostaCorreta: 3
-  },
-  {
-    pergunta: "Qual competição estadual define o representante do Espírito Santo na Copa do Brasil?",
-    opcoes: ["Copa ES", "Campeonato Capixaba", "Supercopa Capixaba", "Torneio Início"],
-    respostaCorreta: 0
-  },
-  {
-    pergunta: "Qual emissora costuma transmitir as finais do Campeonato Capixaba?",
-    opcoes: ["TV Gazeta", "TV Vitória", "TV Tribuna", "RedeTV! ES"],
-    respostaCorreta: 0
-  },
-  {
-    pergunta: "Qual clube capixaba é conhecido pelo apelido 'Brancão'? ",
-    opcoes: ["Rio Branco-ES", "Vitória-ES", "Serra FC", "Vilavelhense"],
-    respostaCorreta: 0
-  },
-  {
-    pergunta: "Qual dessas cidades **não** possui clube com participação recente em campeonatos da FES?",
-    opcoes: ["Linhares", "Serra", "Cachoeiro de Itapemirim", "Anchieta"],
-    respostaCorreta: 3
-  },
-  {
-    pergunta: "Em qual década o futebol capixaba viveu seu auge com clubes disputando torneios nacionais?",
-    opcoes: ["1970", "1980", "1990", "2000"],
-    respostaCorreta: 1
-  },
-  {
-    pergunta: "Qual competição reúne clubes campeões do Capixabão e da Copa ES?",
-    opcoes: ["Supercopa Capixaba", "Taça Espírito Santo", "Copa dos Campeões", "Troféu Capixaba"],
-    respostaCorreta: 0
-  },
-  {
-    pergunta: "Quem é o atual presidente da FES (gestão 2023–2027)?",
-    opcoes: ["Lucas Arruda", "Gustavo Vieira", "João Bosco", "José Carlos Bernabé"],
-    respostaCorreta: 1
-  }
-]
-;
+        const perguntas = 
+
+
+            
+[
+{
+"pergunta": "Em que data exata foi fundada a FPF?",
+"opcoes": ["29 de setembro de 1941", "22 de abril de 1941", "15 de março de 1940", "10 de junho de 1942"],
+"respostaCorreta": 2
+},
+{
+"pergunta": "Qual foi o primeiro campeonato organizado pela FPF em 1941?",
+"opcoes": ["Taça Cidade de São Paulo", "Copa São Paulo de Juniores", "Campeonato Paulista de 1941", "Campeonato de Base"],
+"respostaCorreta": 3
+},
+{
+"pergunta": "Qual é o endereço histórico da primeira sede da FPF?",
+"opcoes": ["Rua da Assembléia, 671", "Avenida Rio Branco, 81", "Praça da República, 200", "Avenida Brigadeiro Luiz Antônio, 905"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Qual clube foi vice-campeão da Copa Paulista de 2024?",
+"opcoes": ["Maricá", "Portuguesa-RJ", "Boavista", "Votuporanguense"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Quantas equipes disputaram a Série A2 do Campeonato Paulista em 2024?",
+"opcoes": ["12", "8", "16", "10"],
+"respostaCorreta": 3
+},
+{
+"pergunta": "Qual é o principal critério de desempate na Taça Paulista de 2025?",
+"opcoes": ["Número de vitórias", "Saldo de gols", "Gols marcados", "Confronto direto"],
+"respostaCorreta": 2
+},
+{
+"pergunta": "Qual é o mandato atual de Reinaldo Carneiro Bastos na FPF em 2025?",
+"opcoes": ["2023-2027", "2022-2026", "2018-2022", "2026-2030"],
+"respostaCorreta": 1
+},
+{
+"pergunta": "Qual é o número de edições do Campeonato Paulista até 2024?",
+"opcoes": ["123", "125", "127", "126"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Em que ano a FPF homologou o título de 1931 do São Paulo?",
+"opcoes": ["2012", "2005", "2015", "2017"],
+"respostaCorreta": 4
+}
+]     ;
 
         let perguntaAtual = 0;
         let acertos = 0;
@@ -323,6 +322,9 @@
         atualizarStatus();
         mostrarPergunta();
     </script>
+
+
+
 <!-- Bloco de anúncio AdSense -->
 <div style="margin: 40px 0; display: flex; justify-content: center;">
   <ins class="adsbygoogle"
