--- a/quizsp07.html
+++ b/quizsp07.html
@@ -20,9 +20,11 @@
   <button onclick="window.location.href='index.html'">Página Inicial</button>
 </section>
 
-
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1074669766193195"
      crossorigin="anonymous"></script>
+
+
+
 
 
 <style>
@@ -165,64 +167,57 @@
             document.getElementById("contador").innerText = `Seus Acessos nesta pag: ${contador}`;
         }
 
-        const perguntas = [
-  {
-    pergunta: "Qual é o nome do clássico regional entre Rio Branco-ES e Desportiva Ferroviária?",
-    opcoes: ["Clássico Capixaba", "Clássico dos Campeões", "Clássico do Oceano", "Clássico dos Gigantes"],
-    respostaCorreta: 2
-  },
-  {
-    pergunta: "Qual dessas iniciativas costuma atrair patrocinadores estaduais para o futebol capixaba?",
-    opcoes: ["Projetos sociais e de base", "Apenas transmissão por rádio", "Venda de camisas antigas", "Gincanas de torcedores"],
-    respostaCorreta: 0
-  },
-  {
-    pergunta: "Qual é o principal critério técnico usado pela FES para aprovar um estádio para jogos profissionais?",
-    opcoes: ["Capacidade mínima de público", "Condições de segurança e vestiários adequados", "Proximidade da capital", "Possuir iluminação colorida no campo"],
-    respostaCorreta: 1
-  },
-  {
-    pergunta: "Que tipo de premiação a FES costuma entregar ao clube com melhor comportamento disciplinar na competição?",
-    opcoes: ["Bônus financeiro", "Troféu Fair Play", "Vaga extra em torneio amistoso", "Isenção de taxa no ano seguinte"],
-    respostaCorreta: 1
-  },
-  {
-    pergunta: "Qual dessas modalidades de futebol a FES apoia em projetos estaduais de formação?",
-    opcoes: ["Futsal escolar", "Beach soccer regional", "Futebol feminino de base", "Todas as anteriores"],
-    respostaCorreta: 3
-  },
-  {
-    pergunta: "Qual é o nome dado ao programa de arbitragem que promove reciclagem anual de árbitros no estado?",
-    opcoes: ["Projeto Árbitro Capixaba", "FormarApito ES", "Curso de Atualização de Arbitragem", "Apito Certo"], 
-    respostaCorreta: 2
-  },
-  {
-    pergunta: "Qual destas ações a FES pode aplicar contra um clube que não regularizar documentação?",
-    opcoes: ["Multa e suspensão de inscrição", "Apenas advertência verbal", "Retirada do título anterior", "Pagamentos obrigatórios à torcida"],
-    respostaCorreta: 0
-  },
-  {
-    pergunta: "Qual é a principal finalidade da Copa Espírito Santo (Copa ES)?",
-    opcoes: ["Definir o campeão estadual absoluto", "Selecionar arbitragem internacional", "Conceder vagas em competições nacionais e revelar clubes"], 
-    respostaCorreta: 2
-  },
-  {
-    pergunta: "Qual desses prêmios individuais costuma existir no Campeonato Capixaba ao final da edição?",
-    opcoes: ["Artilheiro do campeonato", "Melhor técnico do torneio", "Defesa menos vazada", "Todas as anteriores"],
-    respostaCorreta: 3
-  },
-  {
-    pergunta: "Qual ação a FES realiza para incentivar a presença de público nos jogos menores?",
-    opcoes: ["Campanhas escolares e ingressos promocionais", "Exigir público mínimo por lei", "Proibir crianças nos jogos", "Só transmitir jogos por pay-per-view"],
-    respostaCorreta: 0
-  }
-]
+        const perguntas = 
 
 
-
-
-
-;
+            
+[
+{
+"pergunta": "Em que data exata foi fundada a FPF?",
+"opcoes": ["10 de junho de 1942", "22 de abril de 1941", "15 de março de 1940", "29 de setembro de 1941"],
+"respostaCorreta": 2
+},
+{
+"pergunta": "Qual foi o primeiro campeonato organizado pela FPF em 1941?",
+"opcoes": ["Campeonato de Base", "Copa São Paulo de Juniores", "Taça Cidade de São Paulo", "Campeonato Paulista de 1941"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Qual é o endereço histórico da primeira sede da FPF em São Paulo?",
+"opcoes": ["Avenida Rio Branco, 81", "Praça da República, 200", "Avenida Brigadeiro Luiz Antônio, 905", "Rua da Assembléia, 671"],
+"respostaCorreta": 3
+},
+{
+"pergunta": "Qual clube foi vice-campeão da Copa Paulista de 2024?",
+"opcoes": ["Votuporanguense", "Portuguesa-RJ", "Maricá", "Boavista"],
+"respostaCorreta": 1
+},
+{
+"pergunta": "Quantas equipes disputaram a Série A2 do Campeonato Paulista em 2024?",
+"opcoes": ["8", "10", "12", "16"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Qual é o principal critério de desempate na Taça Paulista de 2025?",
+"opcoes": ["Saldo de gols", "Número de vitórias", "Confronto direto", "Gols marcados"],
+"respostaCorreta": 2
+},
+{
+"pergunta": "Qual é o mandato atual de Reinaldo Carneiro Bastos na FPF em 2025?",
+"opcoes": ["2018-2022", "2022-2026", "2023-2027", "2026-2030"],
+"respostaCorreta": 3
+},
+{
+"pergunta": "Qual é o número de edições do Campeonato Paulista até 2024?",
+"opcoes": ["123", "125", "126", "127"],
+"respostaCorreta": 4
+},
+{
+"pergunta": "Em que ano a FPF homologou o título de 1931 do São Paulo?",
+"opcoes": ["2005", "2012", "2015", "2017"],
+"respostaCorreta": 4
+}
+]      ;
 
         let perguntaAtual = 0;
         let acertos = 0;
@@ -327,6 +322,8 @@
         atualizarStatus();
         mostrarPergunta();
     </script>
+
+
 
 <!-- Bloco de anúncio AdSense -->
 <div style="margin: 40px 0; display: flex; justify-content: center;">
